<resources>
    <string name="app_name">BelStom</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="fragment_start_title">Белстом</string>
    <string name="fragment_start_title_label_content">Здоровые зубы под \n контролем поликлиники</string>
    <string name="fragment_start_btn">АВТОРИЗАЦИЯ</string>
    <string name="fragment_start_label_reg">Нет пароля?</string>
    <string name="fragment_start_edit_reg">Запрос пароля</string>
    <string name="fragment_start_auth_title">Авторизация аккаунта</string>
    <string name="fragment_start_auth_label_surname">Фамилия</string>
    <string name="fragment_start_auth_label_name">Имя</string>
    <string name="fragment_start_auth_label_patronymic">Отчество</string>
    <string name="fragment_start_auth_label_password">Пароль</string>
    <string name="fragment_start_auth_btn">Авторизоваться</string>
    <string name="fragment_start_auth_msg">Продолжая, вы  подтверждаете согласие с нашей <font color='#1C88B5'>политикой конфиденциальности</font> и <font color='#1C88B5'>правилами использования</font>.</string>
    <string name="fragment_profile_hint_title">ФИО пациента</string>
    <string name="fragment_profile_label_id">ID: </string>
    <string name="fragment_profile_edit_gender">Пол, возраст</string>
    <string name="fragment_profile_btn_my_map">Мои посещения</string>
    <string name="fragment_profile_btn_treatment_plan">Мои записи</string>
    <string name="fragment_profile_label_name">Имя</string>
    <string name="fragment_profile_label_surname">Фамилия</string>
    <string name="fragment_profile_label_patronymic">Отчество</string>
    <string name="fragment_profile_label_telephone">Телефон</string>
    <string name="fragment_profile_label_personal_information">Персональная информация</string>
    <string name="fragment_profile_label_birth">День рождения</string>
    <string name="fragment_profile_gender2">Пол</string>
    <string name="fragment_profile_label_address">Адрес</string>
    <string name="fragment_profile_btn_exit">ВЫЙТИ ИЗ АККАУНТА</string>
    <string name="uploadWorker_title">Название пуша</string>
    <string name="uploadWorker_message">Сообщение пуша</string>
    <string name="uploadWorker_item">Push item</string>
    <string name="uploadWorker_channelName" translatable="false">Channel name</string>
    <string name="uploadWorker_channelDescription" translatable="false">Channel description"</string>
    <string name="uploadWorker_clickMe" translatable="false">Нажать</string>
    <string name="fragment_start_get_password_title">Запрос пароля</string>
    <string name="fragment_start_get_password_label_surname">Фамилия</string>
    <string name="fragment_start_get_password_label_name">Имя</string>
    <string name="fragment_start_get_password_label_patronymic">Отчество</string>
    <string name="fragment_start_get_password_label_telephone">Телефон в формате: "9101234567"</string>
    <string name="fragment_start_get_password_hint_telephone">9101234567</string>
    <string name="fragment_start_get_password_btn">Запрос</string>
    <string name="toast_password_sent">Пароль отправлен по смс</string>
    <string name="toast_password_client_found">Клиент найден</string>
    <string name="toast_password_surname_filds">Поле «Фамилия» не заполнено</string>
    <string name="toast_password_name_filds">Поле «Имя» не заполнено</string>
    <string name="toast_password_patronymic_filds">Поле «Отчество» не заполнено</string>
    <string name="toast_password_telephone_filds">Поле «Телефон» не заполнено</string>
    <string name="toast_password_birth_filds">Поле «День рождения» не заполнено</string>
    <string name="toast_authorization_password_filds">Поле «Пароль» не заполнено</string>
    <string name="toast_password_error_request">Сбой запроса пароля</string>
    <string name="toast_authorization_error_request">Сбой запроса идентификатора</string>
    <string name="toast_authorization_id_found">Пароль верен</string>
    <string name="toast_recording_time_is_busy">В данное время свободной записи нет.</string>
    <string name="toast_make_an_appointment">Записаться на прием к врачу?</string>
    <string name="labelYes" translatable="false">Да</string>
    <string name="labelNo" translatable="false">Нет</string>
    <string name="toast_no_reception">Нет приема</string>
    <string name="toast_check_doctors">Совпадений ФИО врача не найдено</string>
    <string name="drawer_menu_profile">МОЙ ПРОФИЛЬ</string>
    <string name="drawer_menu_news">НОВОСТИ</string>
    <string name="drawer_menu_appointment">ЗАПИСЬ НА ПРИЕМ</string>
    <string name="drawer_menu_my_map">МОИ ПОСЕЩЕНИЯ</string>
    <string name="drawer_menu_my_visit">МОИ ЗАПИСИ</string>
    <string name="drawer_menu_my_feedback">ОБРАТНАЯ СВЯЗЬ</string>
    <string name="drawer_menu_news_description">НОВОСТИ: ОПИСАНИЕ</string>
    <string name="header_title">Белстом</string>
    <string name="fragment_template_edit_date">Дата</string>
    <string name="fragment_template_hint_date">Тема новостей</string>
    <string name="fragment_template_btn">Просмотр</string>
    <string name="fragment_template_reception_edit_title">Лечение зуба</string>
    <string name="fragment_template_reception_edit_date">Дата приема</string>
    <string name="fragment_template_reception_label_doctor">Врач: </string>
    <string name="fragment_template_reception_edit_doctor">Сотрудник ФИО</string>
    <string name="fragment_template_reception_label_cavity">Зуб/полость:  </string>
    <string name="fragment_template_reception_edit_cavity">Полость</string>
    <string name="fragment_template_visits_edit_title">Запись к врачу</string>
    <string name="fragment_template_visits_edit_date">Дата записи</string>
    <string name="fragment_template_visits_label_doctor">Врач: </string>
    <string name="fragment_template_visits_edit_doctor">Сотрудник ФИО</string>
    <string name="fragment_template_visits_label_cavity">Зуб(ы)/полость:  </string>
    <string name="fragment_template_visits_edit_cavity">Полость</string>
    <string name="fragment_department_reception_days_signature">Шаг 2. Выберите дату</string>
    <string name="fragment_template_reception_description_edit_procedure">Процедура</string>
    <string name="fragment_template_reception_description_edit_cavity">Полость</string>
    <string name="fragment_list_department_label_title1">Шаг 1. Выберите врача/специализацию/отделение</string>
    <string name="fragment_list_department_label_title2">Выберите необходимое отделение</string>
    <string name="fragment_list_department_label_therapeutic">Терапевтическое отделение</string>
    <string name="fragment_list_department_label_orthopedic">Ортопедическое отделение</string>
    <string name="fragment_list_department_label_LOR">ЛОР-кабинет</string>
    <string name="fragment_list_department_label_LPO_base"><u>ЛПО</u></string>
    <string name="fragment_list_department_label_surgery1">Хирургическое отделение №1</string>
    <string name="fragment_list_department_label_surgery2">Хирургическое отделение №2</string>
    <string name="fragment_list_department_label_LPO">
  Лечебно-
  профилактическое
  отделение
</string>
    <string name="fragment_list_department_auto_complete"><font size="20"></font><small>поиск по фамилии</small></string>
    <string name="fragment_list_department_btn_search">ПОИСК</string>
    <string name="fragment_list_department_label_orthopedic_speciality">ОРТОПЕД</string>
    <string name="fragment_list_department_label_therapeutic_speciality">ТЕРАПЕВТ</string>
    <string name="fragment_list_department_label_surgery_speciality">ХИРУРГ</string>
    <string name="fragment_list_department_label_periodontist_speciality">ПАРОДОНТОЛОГ</string>
    <string name="fragment_list_department_label_implantation_speciality">ИМПЛАНТАЦИЯ</string>
    <string name="fragment_list_department_label_hygienist_speciality">ГИГИЕНИСТ</string>
    <string name="fragment_list_department_label_orthodontist_speciality">ОРТОДОНТ</string>
    <string name="fragment_list_department_label_LOR_speciality">ЛОР</string>
    <string name="fragment_list_department_label_orthopedic_speciality_request">Ортопед</string>
    <string name="fragment_list_department_label_therapeutic_speciality_request">Терапевт</string>
    <string name="fragment_list_department_label_surgery_speciality_request">Хирург</string>
    <string name="fragment_list_department_label_periodontist_speciality_request">Пародонтолог</string>
    <string name="fragment_list_department_label_implantation_speciality_request">Имплантация</string>
    <string name="fragment_list_department_label_hygienist_speciality_request">Гигиенист</string>
    <string name="fragment_list_department_label_orthodontist_speciality_request">Ортодонт</string>
    <string name="fragment_list_department_label_LOR_speciality_request">ЛОР</string>
    <string name="fragment_appointment_created_label_title">Запись оформлена!</string>
    <string name="fragment_appointment_created_hint_date">Дата приема</string>
    <string name="fragment_appointment_created_hint_time">Время</string>
    <string name="fragment_appointment_created_hint_profession">Профессия врача</string>
    <string name="fragment_appointment_created_hint_doctor">Врач ФИО</string>
    <string name="fragment_appointment_created_btn">Все записи</string>
    <string name="fragment_appointment_created_title">Запись оформлена</string>
    <string name="fragment_title_profile">ПРОФИЛЬ</string>
    <string name="fragment_title_news">НОВОСТИ</string>
    <string name="fragment_title_news_description">НОВОСТИ: ОПИСАНИЕ</string>
    <string name="fragment_department_title_department_therapeutic">ЗАПИСЬ НА ПРИЕМ: ТО</string>
    <string name="fragment_department_title_department_orthopedic">ЗАПИСЬ НА ПРИЕМ: ОРТО</string>
    <string name="fragment_department_title_department_LPO">ЗАПИСЬ НА ПРИЕМ: ЛПО</string>
    <string name="fragment_department_title_department_surgery1">ЗАПИСЬ НА ПРИЕМ: ХО1</string>
    <string name="fragment_department_title_department_surgery2">ЗАПИСЬ НА ПРИЕМ: ХО2</string>
    <string name="fragment_department_title_department_LOR">ЗАПИСЬ НА ПРИЕМ: ЛОР</string>
    <string name="fragment_department_title">ЗАПИСЬ НА ПРИЕМ</string>
    <string name="fragment_title_schedule_doctor_single">-> ГРАФИК ВРАЧА</string>
    <string name="fragment_title_schedule_doctor_single_time">-> ЧАСЫ ПРИЕМА ВРАЧА</string>
    <string name="fragment_title_feedback">ОБРАТНАЯ СВЯЗЬ</string>
    <string name="fragment_title_start_fragment">НАЧАЛЬНАЯ СТРАНИЦА</string>
    <string name="fragment_title_get_password_fragment">ПОЛУЧЕНИЕ ПАРОЛЯ</string>
    <string name="fragment_title_authorization_fragment">АВТОРИЗАЦИЯ</string>
    <string name="fragment_title_reception">ПОСЕЩЕНИЯ ВРАЧА</string>
    <string name="fragment_title_reception_description">ОПИСАНИЕ ПОСЕЩЕНИЯ</string>
    <string name="fragment_title_visits">МОИ ЗАПИСИ</string>
    <string name="fragment_feedback_title">Стоматологическая поликлиника №1 города Белгорода — крупнейшее в центрально-черноземном регионе специализированное лечебное учреждение, оказывающее стоматологическую помощь на самом высоком уровне жителям Белгородской области и других регионов России.</string>
    <string name="fragment_feedback_www_label">Адрес вебсайта</string>
    <string name="fragment_feedback_www_edit">http://stomat1bel.belzdrav.ru</string>
    <string name="fragment_feedback_telephone_reg_label">Телефон call центра</string>
    <string name="template_business_date">Дата</string>
    <string name="template_business_signature">Шаг 3. Выберите дату</string>
    <string name="template_business_label_doctor">Врач:</string>
    <string name="template_business_hint_edit_doctor">Врач ФИО</string>
    <string name="template_business_label_date">Дата:</string>
</resources>