<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start"
        >

        <TextView
            android:id="@+id/fr_start_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:gravity="center"
            android:text="@string/fragment_start_title"
            android:textColor="@color/black"
            android:textSize="58sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fr_start_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/fragment_start_title_label_content"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/mon_amour_one_medium"
            />

        <Button
            android:id="@+id/fr_start_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/fragment_start_btn" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        >

        <TextView
            android:id="@+id/fr_label_reg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fragment_start_label_reg"
            android:textColor="@color/black"

            />

        <TextView
            android:id="@+id/fr_edit_reg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fragment_start_edit_reg"
            android:layout_marginStart="20dp"
            android:textColor="@color/text_signature"
            />

    </LinearLayout>

</RelativeLayout>