<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="208dp"
            android:layout_height="225dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/check_mark"
            app:tint="@color/check_mark_color" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_appointment_created_label_title"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_text_light"
            />

        <TextView
            android:id="@+id/fragment_appointment_created_edit_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:hint="@string/fragment_appointment_created_hint_date"
            android:textColor="@color/text_signature"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_text_light"
            />
        <TextView
            android:id="@+id/fragment_appointment_created_edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_appointment_created_hint_time"
            android:textColor="@color/text_signature"
            android:textSize="17sp"
            android:textStyle="bold"
            android:fontFamily="@font/sf_pro_text_light"
            />

        <TextView
            android:id="@+id/fragment_appointment_created_edit_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:hint="@string/fragment_appointment_created_hint_doctor"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/sf_pro_text_light"
            />

        <TextView
            android:id="@+id/fragment_appointment_created_edit_profession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/fragment_appointment_created_hint_profession"
            android:textSize="15sp"
            android:fontFamily="@font/sf_pro_text_light"
            />

        <Button
            android:id="@+id/fragment_appointment_created_btn_all_appointment"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="66dp"
            android:backgroundTint="@color/white"
            android:text="@string/fragment_appointment_created_btn"
            android:textColor="@color/text_signature"
            android:textSize="19sp"
            android:fontFamily="@font/sf_pro_text_light"
            />



    </LinearLayout>

</RelativeLayout>