<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_fr_start_get_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_start_get_password_title"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/id_fr_start_get_password_label_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_start_get_password_label_surname"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_signature"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/id_fr_start_get_password_edit_surname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:hint="@string/fragment_start_get_password_label_surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/id_fr_start_get_password_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_start_get_password_label_name"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_signature"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/id_fr_start_get_password_edit_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:hint="@string/fragment_start_get_password_label_surname"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/id_fr_start_get_password_label_patronymic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_start_get_password_label_patronymic"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_signature"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/id_fr_start_get_password_edit_patronymic"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:hint="@string/fragment_start_get_password_label_patronymic"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/id_fr_start_get_password_label_telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_start_get_password_label_telephone"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text_signature"
            android:textSize="16sp"
            />

        <EditText
            android:id="@+id/id_fr_start_get_password_edit_telephone"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:hint="@string/fragment_start_get_password_hint_telephone"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textCapWords"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/id_fr_start_get_password_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/btn_color"
            android:text="@string/fragment_start_get_password_btn"
            />

        <TextView
            android:id="@+id/id_fr_start_get_password_label_msg"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/fragment_start_auth_msg"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>