<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:id="@+id/id_list_department_label_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:gravity="left"
        android:text="@string/fragment_list_department_label_title1"
        android:textColor="@color/delimiter"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_list_department_label_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/fragment_list_department_label_title2"
        android:textColor="@color/delimiter"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/id_list_department_label_title1"
        app:layout_constraintStart_toStartOf="@+id/id_list_department_label_title1"
        app:layout_constraintTop_toBottomOf="@+id/id_list_department_label_title1" />

    <TextView
        android:id="@+id/fragment_list_department_label_therapeutic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_list_department_label_therapeutic"
        android:textColor="@color/text_yellow"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/id_list_department_label_title2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_actv" />

    <TextView
        android:id="@+id/fragment_list_department_label_orthopedic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_list_department_label_orthopedic"
        android:textColor="@color/text_yellow"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_department_label_therapeutic"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_label_therapeutic" />

    <TextView
        android:id="@+id/fragment_list_department_label_LPO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_list_department_label_LPO"
        android:textColor="@color/text_yellow"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_department_label_orthopedic"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_label_orthopedic" />

    <TextView
        android:id="@+id/fragment_list_department_label_surgery2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Ортопедия ЛПО"
        android:textColor="@color/text_yellow"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_department_label_LPO"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_label_LPO" />

    <TextView
        android:id="@+id/fragment_list_department_label_surgery1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_list_department_label_surgery1"
        android:textColor="@color/text_yellow"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_department_label_surgery2"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_label_surgery2" />

    <TextView
        android:id="@+id/fragment_list_department_label_LOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_list_department_label_LOR"
        android:textColor="@color/text_yellow"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/fragment_list_department_label_surgery1"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_label_surgery1" />

    <AutoCompleteTextView
        android:id="@+id/fragment_list_department_actv"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:completionThreshold="1"
        android:hint="@string/fragment_list_department_auto_complete"
        app:layout_constraintTop_toBottomOf="@+id/id_list_department_label_title2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/fragment_list_department_btn_search"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_list_department_btn_search"
        style="@style/Theme.BelStom"
        android:textColor="@color/text_signature"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/fragment_list_department_actv"
        app:layout_constraintTop_toTopOf="@+id/fragment_list_department_actv" />

    <!--    <TextView-->
<!--        android:id="@+id/fragment_list_department_countries"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:paddingBottom="16dp"-->
<!--        android:text="Countries"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/fragment_list_department_actv"-->
<!--        tools:ignore="MissingConstraints" />-->


</androidx.constraintlayout.widget.ConstraintLayout>