<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_business_hours"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="4dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/template_business_signature"
            android:textColor="@color/text_profile"
            android:textSize="14sp"
            android:fontFamily="@font/sf_pro_text_light"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_business_label_doctor"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                />

            <TextView
                android:id="@+id/id_fr_business_hours_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/template_business_hint_edit_doctor"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/sf_pro_text_light"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/template_business_label_date"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                />

            <TextView
                android:id="@+id/id_fr_business_hours_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:hint="@string/template_business_date"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/sf_pro_text_light"
                />

        </LinearLayout>






        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_recyclerView_business_hours"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            tools:listitem="@layout/template_business_hours" />


    </LinearLayout>


</FrameLayout>